--- a/app/src/main/res/layout/holder_confirm.xml
+++ b/app/src/main/res/layout/holder_confirm.xml
@@ -3,14 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".presentation.MainActivity">
+    android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_jobs"
+    <Button
+        android:id="@+id/btn_confirm"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="24dp"
+        android:padding="12dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="32dp"
+        android:stateListAnimator="@null"
+        android:text="Confirm"
+        android:backgroundTint="@color/primary_button_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
