--- a/app/src/main/res/layout/holder_staff.xml
+++ b/app/src/main/res/layout/holder_staff.xml
@@ -36,17 +36,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Orchard"
+        android:textSize="10sp"
         android:textColor="#a9a9a9"
         app:layout_constraintStart_toStartOf="@+id/tv_avatar"
         app:layout_constraintTop_toBottomOf="@+id/tv_avatar" />
 
     <TextView
         android:id="@+id/block_label"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Block"
         android:textColor="#a9a9a9"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="@+id/orchard_label"
         app:layout_constraintStart_toStartOf="@+id/orchard_label"
         app:layout_constraintTop_toBottomOf="@+id/orchard_label" />
 
@@ -68,11 +71,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="piece rate"
-        android:stateListAnimator="@null"
-        android:textAllCaps="true"
-        android:padding="12dp"
         android:backgroundTint="@color/primary_button_color"
+        android:padding="12dp"
+        android:stateListAnimator="@null"
+        android:text="piece rate"
+        android:textAllCaps="true"
         app:layout_constraintEnd_toStartOf="@+id/btn_wages"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,11 +85,11 @@
         android:id="@+id/btn_wages"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="12dp"
         android:layout_marginEnd="8dp"
-        android:text="WAGES"
-        android:stateListAnimator="@null"
         android:backgroundTint="@color/uncheck_button_color"
+        android:padding="12dp"
+        android:stateListAnimator="@null"
+        android:text="WAGES"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_piece_rate"
@@ -104,4 +107,38 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_staff_row"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_piece_rate" />
+
+    <TextView
+        android:id="@+id/tv_staff_orchard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Benji"
+        android:textSize="10sp"
+        android:textColor="@color/black"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/orchard_label"
+        app:layout_constraintStart_toEndOf="@+id/orchard_label" />
+
+    <TextView
+        android:id="@+id/tv_staff_block"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:textColor="@color/black"
+        android:textSize="10sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/block_label"
+        app:layout_constraintStart_toEndOf="@+id/block_label"
+        tools:text="UB13" />
 </androidx.constraintlayout.widget.ConstraintLayout>
