--- a/app/src/main/res/drawable/orange_dot.xml
+++ b/app/src/main/res/drawable/orange_dot.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/primary_button_color" />
+    <solid android:color="#ff8642" />
     <size android:height="16dp" android:width="16dp" />
 </shape>
